finish request host email

--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -407,7 +407,7 @@
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;"
                     >
                       {{ guestName }}&nbsp;wants to book your space:&nbsp;{{ listTitle }}&nbsp;from&nbsp;{{ checkInDate }}&nbsp;to&nbsp;
-                      {{ checkOutDate }}. This booking will earn you a cool&nbsp;{{ total }}. Based on&nbsp;{{ basePrice }}&nbsp;per&nbsp;
+                      {{ checkOutDate }}. This booking will earn you a cool&nbsp;${{ total }}. Based on&nbsp;${{ basePrice }}&nbsp;per&nbsp;
                       {{term}}. <br /><br />
                       Your new guest:
                     </td>
@@ -606,7 +606,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  {{ subtotal }}
+                                  ${{ subtotal }}
                                 </td>
                               </tr>
                               <tr>
@@ -622,7 +622,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  {{ serviceFee }}
+                                  ${{ serviceFee }}
                                 </td>
                               </tr>
                               <tr>
@@ -657,7 +657,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:20px;font-weight: 500; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  {{ total }}
+                                  AUD ${{ total }}
                                 </td>
                               </tr>
                             </table>
