host and guest request

--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -599,7 +599,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  x 7 days
+                                  x {{period}}&nbsp;{{term}}(s)
                                 </td>
                                 <td
                                   align="right"
@@ -856,7 +856,7 @@
                                           style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 600; font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#1F252A;"
                                         >
                                             <strong>{{ basePrice }}</strong>
-                                            <span style="font-size: 8px;">{{ period }}</span>
+                                            <span style="font-size: 8px;">{{ priceType }}</span>
                                         </td>
                                         </tr>
                                             <tr>
