host and guest request

--- a/templates/booking-request-email-guest.html
+++ b/templates/booking-request-email-guest.html
@@ -609,7 +609,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  x {{period}}&nbsp;{{term}}(s)
+                                  x&nbsp;{{period}}&nbsp;{{term}}(s)
                                 </td>
                                 <td
                                   align="right"
