--- a/templates/booking-request-email-guest.html
+++ b/templates/booking-request-email-guest.html
@@ -556,8 +556,8 @@
                                         valign="middle"
                                         style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; font-weight: 600; mso-line-height-rule:exactly;line-height:24px;color:#172439;"
                                       >
-                                        SEP
-                                        <br />27
+                                        {{checkOutMonth}}
+                                        <br />{{checkOutDay}}
                                       </td>
                                     </tr>
                                   </table>
