--- a/templates/booking-request-email-guest.html
+++ b/templates/booking-request-email-guest.html
@@ -436,7 +436,7 @@
                               alt=""
                               width="113"
                               border="0"
-                              style="display: block; outline: none;"
+                              style="display: block; outline: none;border-radius: 50%;"
                             />
                           </td>
                           <td width="20" class="space15">&nbsp;</td>
@@ -790,7 +790,7 @@
                                             alt=""
                                             title=""
                                             width="243"
-                                            style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;"
+                                            style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 165px;"
                                             border="0"
                                             class="full_img480"
                                           />
