--- a/templates/booking-request-email-guest.html
+++ b/templates/booking-request-email-guest.html
@@ -521,7 +521,7 @@
                                   valign="middle"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  <a style="text-decoration: none; color: #172439;cursor: text;">{{checkInWeekday}} check-in</a>
+                                  <a style="text-decoration: none; color: #172439;cursor: text;">{{checkInWeekday}}&nbsp;check-in</a>
                                   <br />
                                   <a style="text-decoration: none; color: #172439;cursor: text;">{{checkInTime}}</a>
                                 </td>
@@ -568,7 +568,7 @@
                                   valign="middle"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  <a style="text-decoration: none; color: #172439;cursor: text;">{{checkOutWeekday}} check-out</a>
+                                  <a style="text-decoration: none; color: #172439;cursor: text;">{{checkOutWeekday}}&nbsp;check-out</a>
                                   <br />
                                   <a style="text-decoration: none; color: #172439;cursor: text;">{{checkOutTime}}</a>
                                 </td>
@@ -790,7 +790,7 @@
                                             alt=""
                                             title=""
                                             width="243"
-                                            style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 165px;"
+                                            style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 165px;object-fit: cover;"
                                             border="0"
                                             class="full_img480"
                                           />
