--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -276,7 +276,7 @@
                               style="text-decoration: none; color: #172439;"
                             >
                               <img
-                                src="images/logo.png"
+                                src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/logo.png"
                                 alt="spacenow"
                                 width="190"
                                 border="0"
@@ -351,7 +351,7 @@
               <td align="center" valign="top" bgcolor="#142D3F">
                 <img
                   class="imgwidth80"
-                  src="images/img_09_01.png"
+                  src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_09_01.png"
                   alt=""
                   width="600"
                   border="0"
@@ -867,7 +867,7 @@
                                                         <tr>
                                                           <td height="38" align="center" valign="middle">
                                                             <img
-                                                              src="images/img_08_icon1.png"
+                                                              src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_08_icon1.png"
                                                               alt=""
                                                               title=""
                                                               width="32"
@@ -1010,7 +1010,7 @@
                         style="text-decoration: none;color:#6ADC91;"
                       >
                         <img
-                          src="images/icon_facebook.png"
+                          src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_facebook.png"
                           alt="facebook"
                           width="12"
                           border="0"
@@ -1022,7 +1022,7 @@
                     <td align="center" valign="middle">
                       <a href="https://www.linkedin.com/company/17945312/" style="text-decoration: none;color:#6ADC91;">
                         <img
-                          src="images/icon_linkedin.png"
+                          src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_linkedin.png"
                           alt="linkedin"
                           width="22"
                           border="0"
@@ -1037,7 +1037,7 @@
                         style="text-decoration: none;color:#6ADC91;"
                       >
                         <img
-                          src="images/icon_youtube.png"
+                          src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_youtube.png"
                           alt="youtube"
                           width="54"
                           border="0"
@@ -1049,7 +1049,7 @@
                     <td align="center" valign="middle">
                       <a href="https://twitter.com/spacenow_aus" style="text-decoration: none;color:#6ADC91;">
                         <img
-                          src="images/icon_twitter.png"
+                          src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_twitter.png"
                           alt="twitter"
                           width="19"
                           border="0"
