--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -550,7 +550,7 @@
                                         valign="middle"
                                         style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; font-weight: 600; mso-line-height-rule:exactly;line-height:24px;color:#172439;"
                                       >
-                                        {checkOutMonth}
+                                        {{checkOutMonth}}
                                         <br />{{checkOutDay}}
                                       </td>
                                     </tr>
@@ -603,7 +603,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  x&nbsp;{{period}}&nbsp;{{totalPeriod}}
+                                  x&nbsp;{{totalPeriod}}
                                 </td>
                                 <td
                                   align="right"
@@ -744,9 +744,7 @@
                           <td
                             align="center"
                             valign="top"
-                            style=" -webkit-box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.1);
-            -moz-box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.1);
-            box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.1); border-radius: 8px;"
+                            style="border: solid 1px #e6e6e6; border-radius: 8px;" 
                           >
                             <table
                               width="100%"
