--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -449,7 +449,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:21px; mso-line-height-rule:exactly;line-height:25px;color:#172439;"
                                 >
-                                  {{gustName}}
+                                  {{guestName}}
                                 </td>
                               </tr>
                        
