--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -425,7 +425,7 @@
                               alt=""
                               width="113"
                               border="0"
-                              style="display: block; outline: none;"
+                              style="display: block; outline: none;border-radius: 50%"
                             />
                           </td>
                           <td width="20" class="space15">&nbsp;</td>
