--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -559,7 +559,7 @@
                                 >
                                   <a style="text-decoration: none; color: #172439;cursor: text;">{{checkOutWeekday}}&nbsp;check-out</a>
                                   <br />
-                                  <a style="text-decoration: none; color: #172439;cursor: text;">{{checkOutWeekday}}</a>
+                                  <a style="text-decoration: none; color: #172439;cursor: text;">{{checkOutTime}}</a>
                                 </td>
                               </tr>
                             </table>
