reviews host guest

--- a/templates/booking-request-review-host.html
+++ b/templates/booking-request-review-host.html
@@ -368,7 +368,7 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:24px; font-weight: 600;mso-line-height-rule:exactly;line-height:29px;color:#172439;"
                     >
-                      {{ guestName }} has just checked out. How were they as a guest?
+                      {{ guestName }}&nbsp;has just checked out. How were they as a guest?
                     </td>
                   </tr>
                   <tr>
