--- a/templates/report-listing.html
+++ b/templates/report-listing.html
@@ -591,7 +591,7 @@
                             align="center"
                           >
                             <a
-                              href="https/app.spacenow.com/space/{{ spaceId }}"
+                              href="https://app.spacenow.com/space/{{ spaceId }}"
                               target="_blank"
                               style="color: #ffffff; text-decoration: none; display: inline-block;"
                               >View <span class="mobile-hide480">reported</span> space</a
