--- a/templates/booking-expiry-email-host.html
+++ b/templates/booking-expiry-email-host.html
@@ -628,7 +628,7 @@
                             align="center"
                           >
                             <a
-                              href="https://app.spacenow.com/account/messages/{{ messageId }}"
+                              href="https://app.spacenow.com/account/message/{{ messageId }}"
                               target="_blank"
                               style="color: #ffffff; text-decoration: none; display: inline-block;"
                               >Message guest</a
