--- a/templates/booking-request-email-guest.html
+++ b/templates/booking-request-email-guest.html
@@ -406,7 +406,8 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;"
                     >
-                      You’ve sent a booking request for&nbsp;{{listTitle}}&nbsp;from&nbsp;{{checkInDate}}&nbsp;to&nbsp;{{checkOutDate}}.
+                      You’ve sent a booking request for
+                      <br />{{listTitle}}&nbsp;from&nbsp;{{checkInDate}}&nbsp;to&nbsp;{{checkOutDate}}.
                       <br />Your host has been sent an approval notification. Hopefully they get back to you asap.
                     </td>
                   </tr>
@@ -1071,7 +1072,7 @@
                 style="padding: 0px 18px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:11px; mso-line-height-rule:exactly;line-height:14px;color:#939393;"
               >
                 You received this email because you are subscribed to notiﬁcations from Spacenow.
-                <br /><br />Update your
+                <br />Update your
                 <a href="#" style="text-decoration: none;color:#939393;">email preferences</a> to choose the type of
                 emails you receive.
               </td>
