--- a/templates/booking-request-review-host.html
+++ b/templates/booking-request-review-host.html
@@ -368,7 +368,7 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:24px; font-weight: 600;mso-line-height-rule:exactly;line-height:29px;color:#172439;"
                     >
-                      {{ guestName }}&nbsp;has just checked out. How were they as a guest?
+                      {{ guestName }}&nbsp;has just checked out. <br />How were they as a guest?
                     </td>
                   </tr>
                   <tr>
@@ -531,7 +531,7 @@
                 style="padding: 0px 18px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:11px; mso-line-height-rule:exactly;line-height:20px;color:#939393;"
               >
                 You received this email because you are subscribed to notiﬁcations from Spacenow.
-                <br /><br class="mobile-hide" />Update your
+                <br class="mobile-hide" />Update your
                 <a href="#" style="text-decoration: none;color:#939393;">email preferences</a> to choose the type of
                 emails you receive.
               </td>
