--- a/templates/confirm-email.html
+++ b/templates/confirm-email.html
@@ -532,7 +532,7 @@
                 style="padding: 0px 18px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:11px; mso-line-height-rule:exactly;line-height:20px;color:#939393;"
               >
                 You received this email because you are subscribed to notiﬁcations from Spacenow.
-                <br /><br class="mobile-hide" />Update your
+                <br class="mobile-hide" />Update your
                 <a href="#" style="text-decoration: none;color:#939393;">email preferences</a> to choose the type of
                 emails you receive.
               </td>
