--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -1072,7 +1072,7 @@
                 style="padding: 0px 18px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:11px; mso-line-height-rule:exactly;line-height:14px;color:#939393;"
               >
                 You received this email because you are subscribed to notiﬁcations from Spacenow.
-                <br /><br />Update your
+                <br />Update your
                 <a href="#" style="text-decoration: none;color:#939393;">email preferences</a> to choose the type of
                 emails you receive.
               </td>
