expiry email updated

--- a/templates/booking-expiry-email-guest.html
+++ b/templates/booking-expiry-email-guest.html
@@ -509,7 +509,7 @@
                       >
                         <tr>
                           <td align="center" valign="top" style=" border: solid 1px #e6e6e6; border-radius: 8px;">
-                            <a href="{{ appLink }}/{{ listingId }}">
+                            <a href="{{ appLink }}/space/{{ listingId }}">
                               <table
                                 width="100%"
                                 align="left"
