expiry email updated

--- a/templates/booking-expiry-email-guest.html
+++ b/templates/booking-expiry-email-guest.html
@@ -703,7 +703,7 @@
                                   align="center"
                                 >
                                   <a
-                                    href="https://app.spacenow.com/space/{{ listingId }}"
+                                    href="{{ appLink }}/space/{{ listingId }}"
                                     target="_blank"
                                     style="color: #ffffff; text-decoration: none; display: inline-block;"
                                     >Request another date</a
@@ -722,7 +722,7 @@
                                   align="center"
                                 >
                                   <a
-                                    href="https://app.spacenow.com/search"
+                                    href="{{ appLink }}/search"
                                     target="_blank"
                                     style="color: #ffffff; text-decoration: none; display: inline-block;"
                                     >Find another space</a
