--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -739,8 +739,9 @@
                           <td
                             align="center"
                             valign="top"
-                            style="border: solid 1px #e6e6e6; border-radius: 8px;"
+                            style="border: solid 1px #e6e6e6;border-radius: 8px;"
                           >
+                          <a href="{{ appLink }}/space/{{ listingId }}">
                             <table
                               width="100%"
                               align="left"
@@ -911,6 +912,7 @@
                                 </td>
                               </tr>
                             </table>
+                          </a>
                           </td>
                         </tr>
                       </table>
