--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -746,6 +746,7 @@
                             valign="top"
                             style="border: solid 1px #e6e6e6; border-radius: 8px;" 
                           >
+                          <a href="{{ appLink }}/space/{{ listingId }}">
                             <table
                               width="100%"
                               align="left"
@@ -916,6 +917,7 @@
                                 </td>
                               </tr>
                             </table>
+                          </a>
                           </td>
                         </tr>
                       </table>
