--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -698,7 +698,7 @@
                                     align="center"
                                   >
                                     <a
-                                      href="https://app.spacenow.com/account/booking"
+                                      href="{{appLink}}/account/booking"
                                       target="_blank"
                                       style="color: #ffffff; text-decoration: none; display: inline-block;"
                                       >View booking</a
@@ -936,7 +936,7 @@
                             align="center"
                           >
                             <a
-                              href="https://app.spacenow.com/account/booking"
+                              href="{{appLink}}/account/booking"
                               target="_blank"
                               style="color: #ffffff; text-decoration: none; display: inline-block;"
                               >View booking</a
