--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -424,6 +424,7 @@
                               src="{{profilePicture}}"
                               alt=""
                               width="113"
+                              height="113"
                               border="0"
                               style="display: block; outline: none;border-radius: 50%"
                             />
