--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -428,6 +428,7 @@
                               src="{{guestPhoto}}"
                               alt=""
                               width="113"
+                              height="113"
                               border="0"
                               style="display: block; outline: none;border-radius: 50%"
                             />
