request and instant

--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -426,7 +426,7 @@
                               width="113"
                               height="113"
                               border="0"
-                              style="display: block; outline: none;border-radius: 50%"
+                              style="display: block; outline: none;border-radius: 50%;object-fit: cover;"
                             />
                           </td>
                           <td width="20" class="space15">&nbsp;</td>
