--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -427,7 +427,7 @@
                               width="110"
                               height="110"
                               border="0"
-                              style="display: block; outline: none;     border-radius: 50%;"
+                              style="display: block; outline: none; border-radius: 50%;object-fit: cover;"
                             />
                           </td>
                           <td width="20" class="space15">&nbsp;</td>
