--- a/templates/report-listing.html
+++ b/templates/report-listing.html
@@ -366,7 +366,7 @@
                       >
                         <tr>
                           <td align="center" valign="top" style=" border: solid 1px #e6e6e6;  border-radius: 8px;">
-                            <a href="{{ appLink }}/space/{{ listingId }}">
+                            <a href="{{ spaceLink }}">
                               <table
                                 width="100%"
                                 align="left"
@@ -593,7 +593,7 @@
                             align="center"
                           >
                             <a
-                              href="https://app.spacenow.com/space/{{ spaceId }}"
+                              href="{{ spaceLink }}"
                               target="_blank"
                               style="color: #ffffff; text-decoration: none; display: inline-block;"
                               >View <span class="mobile-hide480">reported</span> space</a
