--- a/templates/booking-expiry-email-host.html
+++ b/templates/booking-expiry-email-host.html
@@ -407,8 +407,9 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;"
                     >
-                      {{ guestName }}&nbsp;sent you a booking request which has now expired. Contact them if you would
-                      like them to re-issue the request.
+                      {{ guestName }}&nbsp;sent you a booking request which has now expired.
+                      <!-- Contact them if you would
+                      like them to re-issue the request. -->
                     </td>
                   </tr>
                   <tr class="mobile-hide">
@@ -620,7 +621,7 @@
                   <tr>
                     <td height="50" style="font-size: 0; line-height:50px;">&nbsp;</td>
                   </tr>
-                  <tr>
+                  <!-- <tr>
                     <td align="center" valign="top">
                       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                         <tr>
@@ -639,7 +640,7 @@
                         </tr>
                       </table>
                     </td>
-                  </tr>
+                  </tr> -->
                   <tr>
                     <td class="vspace35" height="1" style="font-size: 0; line-height:1px;">&nbsp;</td>
                   </tr>
