--- a/templates/booking-request-email-guest.html
+++ b/templates/booking-request-email-guest.html
@@ -933,6 +933,44 @@
                   <tr>
                     <td height="50" style="font-size: 0; line-height:50px;">&nbsp;</td>
                   </tr>
+                  <tr>
+                    <td
+                      align="left"
+                      valign="top"
+                      style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;"
+                    >
+                      Note:
+                    </td>
+                  </tr>
+                  <tr>
+                    <td height="32" style="font-size: 0; line-height:32px;">&nbsp;</td>
+                  </tr>
+                  <tr>
+                    <td align="center" valign="top">
+                      <table
+                        width="100%"
+                        align="center"
+                        cellpadding="0"
+                        cellspacing="0"
+                        border="0"
+                        style="border-collapse: collapse;"
+                        class="container480"
+                      >
+                      <tr>
+                        <td
+                          align="left"
+                          valign="top"
+                          style="padding: 0 17px 10px 0px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#1F252A;"
+                        >
+                        {{ message }}
+                        </td>
+                      </tr>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td height="50" style="font-size: 0; line-height:50px;">&nbsp;</td>
+                  </tr>
                   <tr class="mobile-hide">
                     <td align="center" valign="top">
                       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
