--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -341,7 +341,7 @@
                 valign="top"
                 style="padding: 0 20px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:26px; font-weight: bold;mso-line-height-rule:exactly;line-height:38px;color:#1C3942;"
               >
-                Ka-ching!<br />You have a new reservation.
+                Ka-ching!<br />You have a new reservation request.
               </td>
             </tr>
             <tr>
@@ -407,7 +407,7 @@
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;"
                     >
                       {{ guestName }}&nbsp;wants to book your space:&nbsp;{{ listTitle }}&nbsp;from&nbsp;{{ checkInDate }}&nbsp;to&nbsp;
-                      {{ checkOutDate }}. This booking will earn you a cool&nbsp;${{ total }}. Based on&nbsp;${{ basePrice }}&nbsp;per&nbsp;
+                      {{ checkOutDate }}. This booking will earn you a cool&nbsp;${{ hostEarning }}. Based on&nbsp;${{ basePrice }}&nbsp;per&nbsp;
                       {{term}}. <br /><br />
                       Your new guest:
                     </td>
