--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -616,14 +616,14 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  Service fee
+                                  Spacenow 10% Fee + GST
                                 </td>
                                 <td
                                   align="right"
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  ${{ serviceFee }}
+                                  - ${{ serviceFee }}
                                 </td>
                               </tr>
                               <tr>
