--- a/templates/complete-listing-host.html
+++ b/templates/complete-listing-host.html
@@ -449,7 +449,7 @@
                       >
                         <tr>
                           <td align="center" valign="top" style="border: solid 1px #e6e6e6; border-radius: 8px;">
-                            <a href="{{ appLink }}/space/{{ listingId }}">
+                            <a href="{{ appLink }}/listing/preview/{{ listingId }}">
                               <table
                                 width="100%"
                                 align="left"
