--- a/templates/complete-listing-host.html
+++ b/templates/complete-listing-host.html
@@ -488,7 +488,7 @@
                                               alt=""
                                               title=""
                                               width="243"
-                                              style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;"
+                                              style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 165px;object-fit: cover;"
                                               border="0"
                                               class="full_img480"
                                             />
