--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -636,7 +636,7 @@
                           <td height="30" style="font-size: 0; line-height:20px;">&nbsp;</td>
                         </tr>
                         <tr>
-                          <td align="center" valign="top">
+                          <td align="center" valign="top" style="border-bottom: 1px solid #E6E6E6; padding-bottom: 30px">
                             <table
                               width="93%"
                               align="center"
@@ -659,6 +659,21 @@
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:20px;font-weight: 500; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
                                   AUD ${{ total }}
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td height="10" style="font-size: 0; line-height:20px;">&nbsp;</td>
+                        </tr>
+                        <tr>
+                          <td align="center" valign="top">
+                            <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
+                              <tr>
+                                <td align="left" valign="top"
+                                  style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:12px;font-weight: 300; mso-line-height-rule:exactly;line-height:12px;color:#172439;">
+                                  All prices are in Australian dollars and include GST
                                 </td>
                               </tr>
                             </table>
