complete listing email

--- a/templates/complete-listing-host.html
+++ b/templates/complete-listing-host.html
@@ -537,7 +537,7 @@
                                             valign="top"
                                             style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 600; font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#1F252A;"
                                           >
-                                            <strong>{{ basePrice }}</strong>
+                                            <strong>${{ basePrice }}</strong>
                                             <span style="font-size: 8px;">{{ priceType }}</span>
                                           </td>
                                         </tr>
