--- a/templates/complete-listing-host.html
+++ b/templates/complete-listing-host.html
@@ -519,7 +519,7 @@
                                             valign="top"
                                             style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:18px; mso-line-height-rule:exactly;line-height:22px;color:#1F252A; overflow: hidden;
                                             white-space: nowrap;
-                                            text-overflow: ellipsis;width: 350px;"
+                                            text-overflow: ellipsis;max-width: 300px;"
                                           >
                                             {{ listTitle }}
                                           </td>
