Fixing ready to pay email.

--- a/templates/booking-ready-to-pay-email.html
+++ b/templates/booking-ready-to-pay-email.html
@@ -387,7 +387,7 @@
                             <tr>
                               <td class="txt17" align="left" valign="top"
                                 style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:21px; mso-line-height-rule:exactly;line-height:25px;color:#172439;">
-                                {{guestName}}
+                                {{hostName}}
                               </td>
                             </tr>
                           </table>
