Fixing checkout link for payment email.

--- a/templates/booking-ready-to-pay-email.html
+++ b/templates/booking-ready-to-pay-email.html
@@ -543,7 +543,7 @@
                                 <td bgcolor="#6ADC91"
                                   style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                                   align="center">
-                                  <a href="{{appLink}}/checkout/{{bookingId}}" target="_blank"
+                                  <a href="{{appLink}}/checkout/{{bookingId}}/pay" target="_blank"
                                     style="color: #ffffff; text-decoration: none; display: inline-block;">Click here to pay</a>
                                 </td>
                               </tr>
@@ -691,7 +691,7 @@
                         <td bgcolor="#6ADC91"
                           style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                           align="center">
-                          <a href="{{appLink}}/checkout/{{bookingId}}" target="_blank"
+                          <a href="{{appLink}}/checkout/{{bookingId}}/pay" target="_blank"
                             style="color: #ffffff; text-decoration: none; display: inline-block;">Click here to pay
                           </a>
                         </td>
