add value discount to instant emails

--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -615,6 +615,22 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
+                                  Promo code
+                                </td>
+                                <td
+                                  align="right"
+                                  valign="top"
+                                  style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
+                                >
+                                  ${{valueDiscount}}
+                                </td>
+                              </tr>
+                              <tr>
+                                <td
+                                  align="left"
+                                  valign="top"
+                                  style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
+                                >
                                   Service fee
                                 </td>
                                 <td
